Changed markdown color

--- a/05_Our_First_Agent_with_LangGraph/Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
+++ b/05_Our_First_Agent_with_LangGraph/Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
@@ -266,11 +266,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<font color='green'>\n",
         "Answer:\n",
         "\n",
         "The model determines which tool to use through the function calling API. The term \"tool calling\" is used interchangeably with \"function calling\". The bind_tools method is used to associate custom functions (tools) with the LLM. This gives the model the ability to call these tools during response generation. \n",
         "\n",
-        "The model itself decides which tool to use based on the input prompt and the tool description. It chooses the tool that aligns best with the current context. The tool selection is facilitated by the tool schemas that are passed to the model.\n"
+        "The model itself decides which tool to use based on the input prompt and the tool description. It chooses the tool that aligns best with the current context. The tool selection is facilitated by the tool schemas that are passed to the model.\n",
+        "</font>"
       ]
     },
     {
@@ -615,9 +617,13 @@
         "\n",
         "If not, how could we impose a limit to the number of cycles?\n",
         "\n",
+        "<font color='green'>\n",
+        "\n",
         "Answer:\n",
         "\n",
-        "There is no limit to how many times we can cycle. We can impose the limit by changing the should_continue function. We will check the length of messages in the state and if this length exceeds certain limit, we can return to END."
+        "There is no limit to how many times we can cycle. We can impose the limit by changing the should_continue function. We will check the length of messages in the state and if this length exceeds certain limit, we can return to END.\n",
+        "\n",
+        "</font>"
       ]
     },
     {
@@ -769,7 +775,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<font color='green'>\n",
         "Answer:\n",
+        "\n",
         "1. The state object is populated with the request.\n",
         "2. The state object is passed to the agent node. The agent node adds AIMessage to the state object. The AIMessage contains a tool call for arxiv search. The agent then passes the changed state to the conditional edge.\n",
         "3. The conditional mode received the state object and finds that \"tools_calls\" is present in the state. It then send sthe state object to the action node.\n",
@@ -778,7 +786,8 @@
         "6. The conditional edge finds \"tools_calls\" and send the state to the action node.\n",
         "7. The action node executes Tavily searches and adds result to the state. It retrieves lates tweets for each author and passes the state to the agent node.\n",
         "8. The agent node formats the response for tweets for each author and passes the state aling the conditional edge.\n",
-        "9. The conditional edge does not find \"tool_calls\" in the state and passes the state to END"
+        "9. The conditional edge does not find \"tool_calls\" in the state and passes the state to END\n",
+        "</font>"
       ]
     },
     {
@@ -907,7 +916,6 @@
       },
       "outputs": [],
       "source": [
-        "\n",
         "questions = [\n",
         "    \"Who was the first person to fly an airplane?\",\n",
         "    \"What year did the Wright brothers achieve the first powered flight?\",\n",
@@ -938,7 +946,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 33,
       "metadata": {
         "id": "RLfrZrgSsn85"
       },
@@ -975,6 +983,7 @@
         "\n",
         "> NOTE: Feel free to indicate if this is problematic or not\n",
         "\n",
+        "<font color='green'>\n",
         "Answer:\n",
         "The correct answer are associated with the question in the order of the questions. \n",
         "This can problematic because the dataset will become hard to manage as it grows. The better approach is to create a dataset as below:\n",
@@ -1004,7 +1013,8 @@
         "        \"question\": \"Who was the first female pilot to fly solo across the Atlantic Ocean?\"\n",
         "        \"answer\":{\"must_mention\": [\"Amelia\", \"Earhart\"]}\n",
         "    }\n",
-        "]"
+        "]\n",
+        "</font>"
       ]
     },
     {
@@ -1022,7 +1032,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 34,
       "metadata": {
         "id": "QrAUXMFftlAY"
       },
@@ -1050,7 +1060,9 @@
         "\n",
         "> NOTE: Alternatively you can suggest where gaps exist in this method.\n",
         "\n",
-        "Answer: Conside using semantic similarity for matching. Currently, the code checks if all required phrases are present in the predication. If all required phrases are found, score = True, otherwise score = False. The better approach would be to calculate score in numbers and not boolean."
+        "<font color='green'>\n",
+        "Answer: Conside using semantic similarity for matching. Currently, the code checks if all required phrases are present in the predication. If all required phrases are found, score = True, otherwise score = False. The better approach would be to calculate score in numbers and not boolean.\n",
+        "</font>"
       ]
     },
     {
@@ -1066,7 +1078,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1093,8 +1105,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "View the evaluation results for experiment: 'RAG Pipeline - Evaluation - 034e-e650fefc' at:\n",
-            "https://smith.langchain.com/o/b00bc9bf-caef-4f0e-a803-13dbe51efe46/datasets/f75b518f-6df5-4099-a7cb-b27d294b6bf0/compare?selectedSessions=32d8c150-40c9-4dab-b430-ca9988c87bb6\n",
+            "View the evaluation results for experiment: 'RAG Pipeline - Evaluation - 5e35-a8050ee0' at:\n",
+            "https://smith.langchain.com/o/b00bc9bf-caef-4f0e-a803-13dbe51efe46/datasets/1a602ecb-8b08-4f39-a189-2fcf7495c26a/compare?selectedSessions=013e8456-6770-468a-8a6f-234b35bd62c5\n",
             "\n",
             "\n"
           ]
@@ -1103,7 +1115,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "6it [00:30,  5.03s/it]\n"
+            "6it [00:08,  1.45s/it]\n"
           ]
         }
       ],
@@ -1119,7 +1131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1132,19 +1144,28 @@
         {
           "data": {
             "text/html": [
-              "<ExperimentResults RAG Pipeline - Evaluation - 034e-e650fefc>"
+              "<ExperimentResults RAG Pipeline - Evaluation - 5e35-a8050ee0>"
             ],
             "text/plain": [
-              "<ExperimentResults RAG Pipeline - Evaluation - 034e-e650fefc>"
+              "<ExperimentResults RAG Pipeline - Evaluation - 5e35-a8050ee0>"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "experiment_results"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<font color='green'>\n",
+        "The RAG pipeline evaluation snapshot is at 05_Our_First_Agent_with_LangGraph/lang_graph_aviation.png\n",
+        "</font>"
       ]
     },
     {
@@ -1216,10 +1237,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "M6rN7feNVn9f"
+        "id": "M6rN7feNVn9f",
+        "tags": [
+          "parameters"
+        ]
       },
       "source": [
-        "The StateGraph is created with AgentState type. We add two nodes, one for the agent (to call model) and the other for actions (tool node)"
+        "<font color='green'>The StateGraph is created with AgentState type. We add two nodes, one for the agent (to call model) and the other for actions (tool node)</font>"
       ]
     },
     {
@@ -1257,7 +1281,7 @@
         "id": "XZ22o2mWVrfp"
       },
       "source": [
-        "This define the entry point of the graph. The graph will start processing beginning with the agent node."
+        "<font color='green'>This define the entry point of the graph. The graph will start processing beginning with the agent node.</font>"
       ]
     },
     {
@@ -1292,7 +1316,7 @@
         "id": "rsXeF6xlaXOZ"
       },
       "source": [
-        "This function checks if we need to use tools by checking if tool_calls exists in last_message. If it does, then it returns action tool. It also checks if the length of messages in the state is greater than 10. If yes, then it returns END to prevent a loop. It then invokes helpfullness check prompt to compare the final_response with initial_query using gpt-4 and returns continue or end depending on if it found the final response helpful or not. If continue is returned, it will continue the loop to find the helpful answer until message count limit is reached."
+        "<font color='green'>This function checks if we need to use tools by checking if tool_calls exists in last_message. If it does, then it returns action tool. It also checks if the length of messages in the state is greater than 10. If yes, then it returns END to prevent a loop. It then invokes helpfullness check prompt to compare the final_response with initial_query using gpt-4 and returns continue or end depending on if it found the final response helpful or not. If continue is returned, it will continue the loop to find the helpful answer until message count limit is reached.</font>"
       ]
     },
     {
@@ -1351,8 +1375,10 @@
         "\n",
         "Please write what is happening in our `tool_call_or_helpful` function!\n",
         "\n",
+        "<font color='green'>\n",
         "Answer:\n",
-        "This function checks if we need to use tools by checking if tool_calls exists in last_message. If it does, then it returns action tool. It also checks if the length of messages in the state is greater than 10. If yes, then it returns END to prevent a loop. It then invokes helpfullness check prompt to compare the final_response with initial_query using gpt-4 and returns continue or end depending on if it found the final response helpful or not. If continue is returned, it will continue the loop to find the helpful answer until message count limit is reached."
+        "This function checks if we need to use tools by checking if tool_calls exists in last_message. If it does, then it returns action tool. It also checks if the length of messages in the state is greater than 10. If yes, then it returns END to prevent a loop. It then invokes helpfullness check prompt to compare the final_response with initial_query using gpt-4 and returns continue or end depending on if it found the final response helpful or not. If continue is returned, it will continue the loop to find the helpful answer until message count limit is reached.\n",
+        "<font>"
       ]
     },
     {
@@ -1361,10 +1387,13 @@
         "id": "6BhnBW2YVsJO"
       },
       "source": [
+        "<font color='green'>\n",
         "The below code adds logic to route in the chain. It routes to the \n",
+        "\n",
         "1. agent if the final reponse is not much helpful and needs improvment. \n",
         "2. action if tools are needed\n",
-        "3. end if the max loop limit is reached or if the final response is helpful"
+        "3. end if the max loop limit is reached or if the final response is helpful\n",
+        "</font>"
       ]
     },
     {
@@ -1407,7 +1436,9 @@
         "id": "ZGDLEWOIVtK0"
       },
       "source": [
-        "The following code created an edge between action node to the agent node after using the tool."
+        "<font color='green'>\n",
+        "The following code created an edge between action node to the agent node after using the tool.\n",
+        "</font>"
       ]
     },
     {
@@ -1442,7 +1473,9 @@
         "id": "rSI8AOaEVvT-"
       },
       "source": [
-        "The following code compiles our graph which has an agent with helpful response check capability."
+        "<font color='green'>\n",
+        "The following code compiles our graph which has an agent with helpful response check capability.\n",
+        "</font>"
       ]
     },
     {
@@ -1462,7 +1495,9 @@
         "id": "F67FGCMRVwGz"
       },
       "source": [
-        "The following code tests out graph_with_helpfulness_check with a query."
+        "<font color='green'>\n",
+        "The following code tests out graph_with_helpfulness_check with a query.\n",
+        "</font>"
       ]
     },
     {
