--- a/06_Multi_Agent_with_LangGraph/Multi_Agent_RAG_LangGraph.ipynb
+++ b/06_Multi_Agent_with_LangGraph/Multi_Agent_RAG_LangGraph.ipynb
@@ -1157,8 +1157,13 @@
         "\n",
         "Using whatever drawing application you wish - please label the flow above on a diagram of your graph.\n",
         "\n",
-        "<img src=\"files/research_agent.png\">\n"
+        "<img src=\"https://github.com/Deepali-Khalkar/AIE5/blob/main/06_Multi_Agent_with_LangGraph/files/research_agent.png\">\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "markdown",
