--- a/08_Evaluating_RAG_With_Ragas/Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
+++ b/08_Evaluating_RAG_With_Ragas/Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
@@ -1688,7 +1688,25 @@
       "source": [
         "#### ❓ Question: \n",
         "\n",
-        "Which system performed better, on what metrics, and why?"
+        "Which system performed better, on what metrics, and why?\n",
+        "\n",
+        "<font color=\"green\">\n",
+        "Answer:\n",
+        "\n",
+        "<b>Results without re-ranker:</b>\n",
+        "\n",
+        "{'context_recall': 0.7671, 'faithfulness': 0.7699, 'factual_correctness': 0.4883, 'answer_relevancy': 0.8760, 'context_entity_recall': 0.4120, 'noise_sensitivity_relevant': 0.2178}\n",
+        "\n",
+        "\n",
+        "<b>Results with re-ranker:</b>\n",
+        "\n",
+        "{'context_recall': 0.7226, 'faithfulness': 0.7716, 'factual_correctness': 0.4792, 'answer_relevancy': 0.8777, 'context_entity_recall': 0.4222, 'noise_sensitivity_relevant': 0.2232}\n",
+        "\n",
+        "According to the result I got, both the systems performed very similar. The results without re-rank have context_recall and factual_correctness score higher than that for results with re-rank.\n",
+        "\n",
+        "The faithfulness, answer_relevancy, context_entity_recall and noise_sensitivity_relevant score for system with re-rank are better than the system without re-rank. The might be because re-ranking improves retrieval of relevant documents\n",
+        "\n",
+        "</font>\n"
       ]
     }
   ],
