--- a/08_Evaluating_RAG_With_Ragas/Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb
+++ b/08_Evaluating_RAG_With_Ragas/Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb
@@ -485,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 26,
       "metadata": {
         "id": "oGX9bx286hkx"
       },
@@ -499,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -511,13 +511,11 @@
         {
           "data": {
             "text/plain": [
-              "[HumanMessage(content='What is the price of copper?', metadata=None, type='human'),\n",
-              " AIMessage(content='', metadata=None, type='ai', tool_calls=[ToolCall(name='get_metal_price', args={'metal_name': 'copper'})]),\n",
-              " ToolMessage(content='0.3236', metadata=None, type='tool'),\n",
-              " AIMessage(content='The current price of copper is $0.3236 per gram.', metadata=None, type='ai', tool_calls=[])]"
+              "[HumanMessage(content='How fast can an eagle fly?', metadata=None, type='human'),\n",
+              " AIMessage(content='Eagles are known for their impressive flying abilities, with different species having varying speeds. On average, an eagle can fly at speeds of 20 to 40 miles per hour (32 to 64 kilometers per hour) during level flight. However, during a hunt or when diving, some eagles can reach speeds of up to 100 miles per hour (160 kilometers per hour) or more. The bald eagle, for instance, can dive at speeds of about 75 to 99 miles per hour (121 to 159 kilometers per hour).', metadata=None, type='ai', tool_calls=[])]"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -532,7 +530,15 @@
       "source": [
         "#### ❓ Question: \n",
         "\n",
-        "Describe in your own words what a \"trace\" is."
+        "Describe in your own words what a \"trace\" is.\n",
+        "\n",
+        "<font color=\"green\">\n",
+        "\n",
+        "Answer:\n",
+        "\n",
+        "Trace is the sequence of messages exchanged between the human user, LLM and any external tools (in this case the metal tool). It is the sequence of messages from input to the output. Trace contains steps to arrive at output from the input.\n",
+        "\n",
+        "</font>"
       ]
     },
     {
@@ -567,7 +573,25 @@
       "source": [
         "#### ❓ Question: \n",
         "\n",
-        "Describe *how* each of the above metrics are calculated. This will require you to read the documentation for each metric."
+        "Describe *how* each of the above metrics are calculated. This will require you to read the documentation for each metric.\n",
+        "\n",
+        "<font color=\"green\">\n",
+        "Answer:\n",
+        "\n",
+        "Tool Call Accuracy: This metric needs user_input and reference_tool_calls to evaluate the performance of the LLM in identifying and calling the required tools to complete a given task. This metric is computed by comparing the reference_tool_calls with the Tool calls made by the AI. The values range between 0 and 1, with higher values indicating better performance.\n",
+        "\n",
+        "Agent Goal Accuracy: This metric needs user_input and reference to evaluate the performance of the LLM in identifying and achieving the goals of the user. The reference is used as an ideal outcome. This metric is computed by comparing the reference with the goal achieved by the end of the workflow.\n",
+        "\n",
+        "Topic Adherence: This metric needs user_input and reference_topics (which are the predefined set of topics that the AI system is expected to adhere) to evaluate the topic adherence. The metric can compute precision, recall and F1 score for topic adherence\n",
+        "\n",
+        "Precision = (|Queries that are answered and adheres to any present reference topics|) / (|Queries that are answered and adheres to any present reference topics| + |Queries that are answered and do not adhere to any present reference topics|)\n",
+        "\n",
+        "\n",
+        "Recall = (|Queries that are answered and adheres to any present reference topics|) / (|Queries that are answered and adheres to any present reference topics| + |Queries that are refused and should have been answered|)\n",
+        "\n",
+        "F1 score = (2 * precision * recall) / (precision + recall)\n",
+        "\n",
+        "</font>\n"
       ]
     },
     {
