--- a/07_Synthetic_Data_Generation_and_LangSmith/Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
+++ b/07_Synthetic_Data_Generation_and_LangSmith/Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
@@ -485,9 +485,9 @@
         "\n",
         "1. SingleHopSpecificQuerySynthesizer: SingleHopSpecificQuerySynthesizer generates single-hop queries that are specific in nature. Single hop query is a straight forward question that can be answered by retrieving information from a single document or a source to provide relevant answer. It involves only one step to arrive at answer. SingleHopSpecificQuerySynthesizer creates precise questions that target specific information.\n",
         "\n",
-        "2. MultiHopAbstractQuerySynthesizer: MultiHopAbstractQuerySynthesizer generates abstract multi-hop queries. Multi-hop queries require reasoning across multiple peace of information from different documents. MultiHopAbstractQuerySynthesizer generates abstract multi-hop queries that challenges the retrieval system to pull from documents that contain high level reasoning and explanation rather than simple facts.\n",
+        "2. MultiHopAbstractQuerySynthesizer: MultiHopAbstractQuerySynthesizer generates abstract multi-hop queries. Multi-hop queries require reasoning across multiple piece of information from different documents. MultiHopAbstractQuerySynthesizer generates abstract multi-hop queries that challenges the retrieval system to pull from documents that contain high level reasoning and explanation rather than simple facts.\n",
         "\n",
-        "3. MultiHopSpecificQuerySynthesizer: MultiHopSpecificQuerySynthesizer focuses on creating detailed and precise questions that target specific informtaion across multiple nodes of knowledge graph. It generates specific multi-step queries instead of broad ones.\n",
+        "3. MultiHopSpecificQuerySynthesizer: MultiHopSpecificQuerySynthesizer focuses on creating detailed and precise questions that target specific information across multiple nodes of knowledge graph. It generates specific multi-step queries instead of broad ones.\n",
         "</font>\n"
       ]
     },
@@ -1309,7 +1309,7 @@
         "\n",
         "1. qa_evaluator: instructs an LLM to directly grade response as correct or incorrect based on the reference answer.\n",
         "2. labeled_helpfulness_evaluator: instructs an LLM to assess if a predication satisfies the helpfulness criteria by taking into account the correct reference answer.\n",
-        "3. dope_or_nope_evaluator: judges the dopeness i.e weather the response is cool, lit or dope\n",
+        "3. dope_or_nope_evaluator: judges the dopeness i.e whether the response is cool, lit or dope\n",
         "</font>\n"
       ]
     },
@@ -1662,7 +1662,7 @@
         "Answer:\n",
         "Increasing the chunk size can improve the effectiveness of retrieval as the entire answer might exist in a single chunk. Large chunk also contain more context. This reduces the risk of missing crucial information. Large chunks might introduce irrelevant text thus reducing retrieval precision. \n",
         "\n",
-        "Smaller chunks increases the chances of fetching highly relevant information. However, small chunks may lose context, making it harder for the modle to generate accurate responses.\n",
+        "Smaller chunks increases the chances of fetching highly relevant information. However, small chunks may lose context, making it harder for the model to generate accurate responses.\n",
         "</font>"
       ]
     },
@@ -2081,13 +2081,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "\n",
+        "<font color=\"green\">\n",
+        "\n",
         "Following metrics changed:\n",
         "\n",
         "1. Correctness: Experiment #2 has high correctness score than Experiment #1. The LLM prompt and the choice of text-embedding-3-large embedding model might have improved the correctness score for Experiment #2.\n",
         "\n",
         "2. Dopeness: Experiment #2 has significantly higher dopeness score than Experiment #1. This might be because we added dope prompt augmentation.\n",
         "\n",
-        "3. Helpfulness: Experiment #1 has better helpfulness score than Experiment #2 but both score are low. The dope prompt augmentation increases dopeness but it can be responsible for the drop in helpfulness. With dope, the new answers are less clear to understand.\n"
+        "3. Helpfulness: Experiment #1 has better helpfulness score than Experiment #2 but both score are low. The dope prompt augmentation increases dopeness but it can be responsible for the drop in helpfulness. With dope, the new answers are less clear to understand.\n",
+        "\n",
+        "</font>"
       ]
     }
   ],
