--- a/13_Advanced_Retrieval/Advanced_Retrieval_with_LangChain_Assignment.ipynb
+++ b/13_Advanced_Retrieval/Advanced_Retrieval_with_LangChain_Assignment.ipynb
@@ -572,7 +572,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 53
         },
         "id": "43zdcdUydtXh",
         "outputId": "61ac6598-621e-45b4-c6f3-979204cf74be"
@@ -602,7 +602,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 88
         },
         "id": "lpG6rlvvvKFq",
         "outputId": "e8569972-7654-441e-d6c1-595eb0af2e15"
@@ -702,7 +702,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 70
         },
         "id": "oY9qzmm3SOrF",
         "outputId": "31df19fa-d85e-404d-9445-50a087474f36"
@@ -871,7 +871,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 70
         },
         "id": "V3iGpokswcBb",
         "outputId": "905798dc-90d5-42dd-d0a6-11113e9e30b3"
@@ -931,7 +931,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 88
         },
         "id": "zn1EqaGqweXN",
         "outputId": "93c0d881-b32b-4a64-cb2e-5a2e0c3831c8"
@@ -1052,7 +1052,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 70
         },
         "id": "aAlSthxrRDBC",
         "outputId": "b4dd6a74-2dba-46b4-d086-d7882a6178bf"
@@ -1082,7 +1082,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 88
         },
         "id": "Uv1mpCK8REs4",
         "outputId": "5eda402e-181c-44df-89e6-1de230a6ff27"
@@ -1295,7 +1295,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 53
         },
         "id": "V5F1T-wNl3cg",
         "outputId": "c5b6cb81-4626-45fd-ecaf-be5c01737e98"
@@ -1460,7 +1460,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 53
         },
         "id": "MNFWLYECURI1",
         "outputId": "ba5fcd3e-ba1b-4e85-d125-09e445211d63"
@@ -1490,7 +1490,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 88
         },
         "id": "A7qbHfWgUR4c",
         "outputId": "b5db2e94-2e4f-4370-8c9f-4a1fd43f35a8"
@@ -1724,7 +1724,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 53
         },
         "id": "xdqfBH1SZ3f9",
         "outputId": "cfb46d11-dc62-4bec-a389-f4144589eb3a"
@@ -1754,7 +1754,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 70
         },
         "id": "rAcAObZnZ4o6",
         "outputId": "d4328e24-0921-4fd7-9919-ad100745bf8d"
@@ -2144,7 +2144,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 536
+          "height": 710
         },
         "id": "z4sLgb7rhIyh",
         "outputId": "f099f126-30a9-4de9-91d3-6ef3cb8660e6"
@@ -2542,7 +2542,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 73
         },
         "id": "h68QjdDphIkl",
         "outputId": "e74c213c-4109-421c-d0c5-78fa7d3fbb8a"
@@ -2601,6 +2601,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "EK3a8j5VjPgr"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "**Run evaluations**"
       ],
@@ -2609,8 +2616,62 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "We'll need to select a judge model - in this case we're using the same model that was used to generate our Synthetic Data.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "aOKJmngnjQL6"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from ragas import evaluate\n",
+        "from ragas.llms import LangchainLLMWrapper\n",
+        "from ragas import EvaluationDataset, evaluate, RunConfig\n",
+        "from ragas.metrics import (\n",
+        "    LLMContextRecall, Faithfulness, FactualCorrectness, ResponseRelevancy, ContextEntityRecall, NoiseSensitivity\n",
+        ")\n",
+        "\n",
+        "# Evaluation model\n",
+        "evaluator_llm = LangchainLLMWrapper(ChatOpenAI(model=\"gpt-4o\"))\n",
+        "\n",
+        "#Custom run config\n",
+        "custom_run_config = RunConfig(timeout=360)\n",
+        "\n",
+        "# Retrieval results\n",
+        "retrieval_results = {}\n",
+        "\n",
+        "# Evaluate each retrieval chain\n",
+        "for name, chain in retrieval_chain.items():\n",
+        "  print(f\"Evaluating {name}\")\n",
+        "\n",
+        "  for test_row in dataset:\n",
+        "    response = chain.invoke({\"question\" : test_row.eval_sample.user_input})\n",
+        "    test_row.eval_sample.response = response[\"response\"]\n",
+        "    test_row.eval_sample.retrieved_contexts = [context.page_content for context in response[\"context\"]]\n",
+        "\n",
+        "  # Convert dataset to EvaluationDataset format\n",
+        "  evaluation_dataset = EvaluationDataset.from_pandas(dataset.to_pandas())\n",
+        "\n",
+        "  # Run evaluation\n",
+        "  result = evaluate(\n",
+        "      dataset=evaluation_dataset,\n",
+        "      metrics=[\n",
+        "          LLMContextRecall(),\n",
+        "          Faithfulness(),\n",
+        "          FactualCorrectness(),\n",
+        "          ResponseRelevancy(),\n",
+        "          ContextEntityRecall(),\n",
+        "          NoiseSensitivity()\n",
+        "      ],\n",
+        "      llm=evaluator_llm,\n",
+        "      run_config=custom_run_config\n",
+        "  )\n",
+        "\n"
+      ],
       "metadata": {
         "id": "1cUPAHO4isKY"
       },
